--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
-    <title>React App</title>
+    <title>#QRooVota2022</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
